# todayiwill-notify

./: README.md
todayiwillnotify/: Cargo.toml
todayiwillnotify/src/: main.rs
todayiwillnotify/tests/: daemon.rs
