[package]
name = "todayiwillnotify"
version = "0.0.0"
edition = "2021"

[dependencies]
assert_cmd = "2.0.14"
daemonize = "0.5.0"
dirs = "5.0.1"
env_logger = "0.11.3"
log = "0.4.22"
notify = "6.1.1"
notify-rust = "4.11.0"
todayiwill = { git = "https://github.com/vncsmyrnk/todayiwill.git", branch = "8-add-system-notifications" }
